# ggltasks

./: README.md  pyproject.toml
.github/workflows/: publish.yml
ggltasks/: auth.py  local_storage.py  main.py  task_service.py  ui_manager.py
tasks_tui/: auth.py  local_storage.py  main.py  task_service.py  ui_manager.py
