[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ggltasks"
version = "0.1.7"
description = "TUI for Google Tasks"
readme = "README.md"
authors = [
    {name = "noble", email = "noblegithub@poptortpop.anonaddy.me"},
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Console :: Curses",
]
dependencies = [
    "google-api-python-client",
    "google-auth-oauthlib",
    "google-auth-httplib2" # This line MUST NOT have a comma at the end!
]

[project.scripts]
# This line (tasks-tui = ...) is likely what was failing to parse.
ggltasks = "tasks_tui.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["tasks_tui"]

