[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ggltasks"
version = "0.2.2"
description = "TUI for Google Tasks"
readme = "README.md"
authors = [
    {name = "Noble Alex", email = "noblejosephalex@gmail.com"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Console :: Curses",
]
dependencies = [
    "google-api-python-client",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "uni-curses",
    "python-dateutil",
]

[project.scripts]
ggltasks = "ggltasks.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["ggltasks"]
